Fixed the MealPage. Diffused improvements. Introduced test project.
Injections' positions: now shows the images and the new points, but works completely only in Windows
Cosmetic modifications around the solution, several in ToolTips, that now are everywhere.
MealPage: re-done the binding and acces to database with respect with the UI.
  Now the FoodInMeal information is showm unbound in the UI and the code manages it manually.
  Information about Meal and the grid of FoodsInMeal are bound.
  The page behaves in quite acceptable mode.
RecipesPage:
  Refactored to model the MealPage. To complete and test.
UiAccuracy: fixed its behaviour when one of the two controls changes its content
Added a Unit Test project, but yet with a few methods to test.

--- a/GlucoMan.Maui/GlucoMan.Maui.csproj
+++ b/GlucoMan.Maui/GlucoMan.Maui.csproj
@@ -54,6 +54,7 @@
 	  <ApplicationTitle>GlucoMan</ApplicationTitle>
 	  <ApplicationId>it.ingmonti.glucoman</ApplicationId>
 	  <Deterministic>False</Deterministic>
+	  <ApplicationDisplayVersion>0.8.0</ApplicationDisplayVersion>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net9.0-ios|AnyCPU'">
@@ -72,12 +73,14 @@
 	  <ApplicationTitle>GlucoMan</ApplicationTitle>
 	  <ApplicationId>it.ingmonti.glucoman</ApplicationId>
 	  <Deterministic>False</Deterministic>
+	  <ApplicationDisplayVersion>0.8.0</ApplicationDisplayVersion>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net9.0-android|AnyCPU'">
 	  <ApplicationTitle>GlucoMan</ApplicationTitle>
 	  <ApplicationId>it.ingmonti.glucoman</ApplicationId>
 	  <Deterministic>False</Deterministic>
+	  <ApplicationDisplayVersion>0.8.0</ApplicationDisplayVersion>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net9.0-ios|AnyCPU'">
@@ -96,10 +99,12 @@
 	  <ApplicationTitle>GlucoMan</ApplicationTitle>
 	  <ApplicationId>it.ingmonti.glucoman</ApplicationId>
 	  <Deterministic>False</Deterministic>
+	  <ApplicationDisplayVersion>0.8.0</ApplicationDisplayVersion>
 	</PropertyGroup>
 
 	<PropertyGroup>
 	  <ApplicationIcon>gamon LegoLogo 256x256.ico</ApplicationIcon>
+	  <FileVersion></FileVersion>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -236,9 +241,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Data.Sqlite.Core" Version="9.0.7" />
-		<PackageReference Include="Microsoft.Maui.Controls" Version="9.0.82" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.7" />
+		<PackageReference Include="Microsoft.Data.Sqlite.Core" Version="9.0.8" />
+		<PackageReference Include="Microsoft.Maui.Controls" Version="9.0.100" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.8" />
+		<PackageReference Include="NUnit" Version="4.4.0" />
 		<PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.11" />
 	</ItemGroup>
 
