Work on Alarms. Refactorings.
DataLayer: substituted all methods Read*() with Get*()
BL_MealAndFood: removed dependency to .Net MAUI
  involved modifications on classes: CirclesDrawable, ClickableImagePage
    new class Point, that abstracts MAUI Point class
Alarm class: big modification to the structure, that implies modifications to the database
        MODIFICATIONS TO DATABASE TABLE YET TO BE DONE
AlarmPage: added a prototypical UI, still with no code behind
AboutPage: added explanation about tooltips
ALL THE ALARM MANAGEMENT MUST BE COMPLETED AND TESTED
MainPage: added icon in Alarm button
Images: made icon ringing_clock.cs
UnitTests: something initiated, nothing important nor working

--- a/GlucoMan.Maui/GlucoMan.Maui.csproj
+++ b/GlucoMan.Maui/GlucoMan.Maui.csproj
@@ -111,6 +111,7 @@
 		<!-- App Icon -->
 		<MauiIcon Include="Resources\AppIcon\appicon.svg" />
 		<MauiImage Include="Resources\Images\escape.png" />
+		<MauiImage Include="Resources\Images\ringing_clock.png" />
 
 		<!-- Splash Screen -->
 		<MauiSplashScreen Include="Resources\AppIcon\appicon.svg" Color="#7dbff3" BaseSize="128,128" />
@@ -192,6 +193,7 @@
 	  <None Remove="Resources\Images\questionmark.png" />
 	  <None Remove="Resources\Images\recipe.png" />
 	  <None Remove="Resources\Images\recipe.svg" />
+	  <None Remove="Resources\Images\ringing_clock.png" />
 	  <None Remove="Resources\Images\rounding.png" />
 	  <None Remove="Resources\Images\sugar.svg" />
 	  <None Remove="Resources\Images\syringe.png" />
