--- a/GlucoMan.Maui/GlucoMan.Maui.csproj
+++ b/GlucoMan.Maui/GlucoMan.Maui.csproj
@@ -47,8 +47,8 @@
 		<PackageProjectUrl>www.ingmonti.it/GlucoMan</PackageProjectUrl>
 		<PackageIcon>..</PackageIcon>
 		<NeutralLanguage>en</NeutralLanguage>
-		<AssemblyVersion>0.60.0</AssemblyVersion>
-		<FileVersion>0.60.0</FileVersion>
+		<AssemblyVersion>0.80.0</AssemblyVersion>
+		<FileVersion>0.80.0</FileVersion>
 		<PackageLicenseExpression>GPL-2.0-only</PackageLicenseExpression>
 	</PropertyGroup>
 
@@ -138,22 +138,38 @@
 	  <Resource Include="Resources\Images\braccia_retro.png" />
 	  <Resource Include="Resources\Images\busto_fronte.png" />
 	  <Resource Include="Resources\Images\busto_retro.png" />
-	  <Resource Include="Resources\Images\Fronte vettoriale.svg" />
-	  <Resource Include="Resources\Images\fronte.png" />
-	  <Resource Include="Resources\Images\mano_destra.png" />
-	  <Resource Include="Resources\Images\mano_sinistra.png" />
-	  <Resource Include="Resources\Images\Retro vettoriale originale.svg" />
-	  <Resource Include="Resources\Images\Retro vettoriale.svg" />
-	  <Resource Include="Resources\Images\Retro.png" />
+	  <Resource Include="Resources\Images\Fronte vettoriale.svg">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </Resource>
+	  <Resource Include="Resources\Images\fronte.png">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </Resource>
+	  <Resource Include="Resources\Images\mano_destra.png">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </Resource>
+	  <Resource Include="Resources\Images\mano_sinistra.png">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </Resource>
+	  <Resource Include="Resources\Images\Retro vettoriale originale.svg">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </Resource>
+	  <Resource Include="Resources\Images\Retro vettoriale.svg">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </Resource>
+	  <Resource Include="Resources\Images\Retro.png">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </Resource>
 	  <Resource Include="Resources\Images\braccia.png" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Data.Sqlite.Core" Version="8.0.7" />
-		<PackageReference Include="Microsoft.Maui.Controls" Version="8.0.71" />
-		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.71" />
+		<PackageReference Include="Microsoft.Data.Sqlite.Core" Version="8.0.8" />
+		<PackageReference Include="Microsoft.Maui.Controls" Version="8.0.91" />
+		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.91" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
-		<PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.8" />
+		<PackageReference Include="Microsoft.Maui.Essentials" Version="8.0.91" />
+		<PackageReference Include="Plugin.Permissions" Version="6.0.1" />
+		<PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.10" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -161,6 +177,9 @@
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="BackPicturePage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="ConfigurationPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="CorrectionParametersPage.xaml">
@@ -220,6 +239,12 @@
 	  <MauiXaml Update="WeighFoodPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)' == 'net8.0-android'">
+	  <PackageReference Include="PortableStorage.Android">
+	    <Version>1.2.71</Version>
+	  </PackageReference>
 	</ItemGroup>
 
 	<Import Project="..\SharedGeneral\SharedGeneral.projitems" Label="Shared" />
