--- a/GlucoMan.Maui/Platforms/Android/AndroidManifest.xml
+++ b/GlucoMan.Maui/Platforms/Android/AndroidManifest.xml
@@ -1,46 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-  
-  <!-- Basic permissions -->
-  <uses-permission android:name="android.permission.INTERNET" />
-  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-  
-  <!-- Storage permissions for different Android versions -->
-  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" 
-                   android:maxSdkVersion="28" />
-  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" 
-                   android:maxSdkVersion="32" />
-  
-  <!-- For Android 11+ (API 30+) -->
-  <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
-  
-  <!-- For accessing media files in Android 13+ -->
-  <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
-  <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
-  <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
-  
-  <!-- Additional permissions -->
-  <uses-permission android:name="android.permission.MANAGE_DOCUMENTS" />
-  <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
-  
-  <application 
-    android:allowBackup="true"
-    android:icon="@mipmap/appicon"
-    android:roundIcon="@mipmap/appicon"
-    android:supportsRtl="true"
-    android:requestLegacyExternalStorage="true">
-    
-    <!-- File Provider for sharing files -->
-    <provider
-      android:name="androidx.core.content.FileProvider"
-      android:authorities="${applicationId}.fileprovider"
-      android:exported="false"
-      android:grantUriPermissions="true">
-      <meta-data
-        android:name="android.support.FILE_PROVIDER_PATHS"
-        android:resource="@xml/file_provider_paths" />
-    </provider>
-    
-  </application>
-  
+	<!-- Basic permissions -->
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<!-- Storage permissions for different Android versions -->
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+	<!-- For Android 11+ (API 30+) -->
+	<uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
+	<!-- For accessing media files in Android 13+ -->
+	<uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+	<uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
+	<uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
+	<!-- Additional permissions -->
+	<uses-permission android:name="android.permission.MANAGE_DOCUMENTS" />
+	<uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
+	<application android:allowBackup="true" android:icon="@mipmap/appicon" android:supportsRtl="true" android:requestLegacyExternalStorage="true">
+		<!-- File Provider for sharing files -->
+		<provider android:name="androidx.core.content.FileProvider" android:authorities="${applicationId}.fileprovider" android:exported="false" android:grantUriPermissions="true">
+			<meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/file_provider_paths" />
+		</provider>
+	</application>
 </manifest>
