--- a/GlucoMan.Maui/Platforms/Android/AndroidManifest.xml
+++ b/GlucoMan.Maui/Platforms/Android/AndroidManifest.xml
@@ -3,6 +3,10 @@
 	<!-- Basic permissions -->
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<!-- Camera permissions for container photos -->
+	<uses-permission android:name="android.permission.CAMERA" />
+	<uses-feature android:name="android.hardware.camera" android:required="false" />
+	<uses-feature android:name="android.hardware.camera.autofocus" android:required="false" />
 	<!-- Storage permissions for different Android versions -->
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
