--- a/GlucoMan.Maui/Platforms/iOS/Info.plist
+++ b/GlucoMan.Maui/Platforms/iOS/Info.plist
@@ -28,5 +28,12 @@
 	</array>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/appicon.appiconset</string>
+	<!-- Camera and Photo Library permissions -->
+	<key>NSCameraUsageDescription</key>
+	<string>This app needs camera access to take photos of food containers for accurate portion tracking</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>This app needs photo library access to save container photos for future reference</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app needs photo library access to manage container photos</string>
 </dict>
 </plist>
