--- a/GlucoMan.Maui/GlucoMan.Maui.csproj
+++ b/GlucoMan.Maui/GlucoMan.Maui.csproj
@@ -27,7 +27,7 @@
     <ApplicationIdGuid>30939246-cae7-40ff-92ce-a308f5c8b0e8</ApplicationIdGuid>
 
 		<!-- Versions -->
-		<ApplicationDisplayVersion>0.9.0.0</ApplicationDisplayVersion>
+		<ApplicationDisplayVersion>0.9.2.0</ApplicationDisplayVersion>
 		<ApplicationVersion>1</ApplicationVersion>
 
 		<!-- To develop, package, and publish an app to the Microsoft Store, see: https://aka.ms/MauiTemplateUnpackaged -->
@@ -54,7 +54,7 @@
 	  <ApplicationTitle>GlucoMan</ApplicationTitle>
 	  <ApplicationId>it.ingmonti.glucoman</ApplicationId>
 	  <Deterministic>False</Deterministic>
-	  <ApplicationDisplayVersion>0.9.0</ApplicationDisplayVersion>
+	  <ApplicationDisplayVersion>0.9.2</ApplicationDisplayVersion>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net9.0-ios|AnyCPU'">
@@ -73,14 +73,14 @@
 	  <ApplicationTitle>GlucoMan</ApplicationTitle>
 	  <ApplicationId>it.ingmonti.glucoman</ApplicationId>
 	  <Deterministic>False</Deterministic>
-	  <ApplicationDisplayVersion>0.9.0</ApplicationDisplayVersion>
+	  <ApplicationDisplayVersion>0.9.2</ApplicationDisplayVersion>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net9.0-android|AnyCPU'">
 	  <ApplicationTitle>GlucoMan</ApplicationTitle>
 	  <ApplicationId>it.ingmonti.glucoman</ApplicationId>
 	  <Deterministic>False</Deterministic>
-	  <ApplicationDisplayVersion>0.9.0</ApplicationDisplayVersion>
+	  <ApplicationDisplayVersion>0.9.2</ApplicationDisplayVersion>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net9.0-ios|AnyCPU'">
@@ -99,7 +99,7 @@
 	  <ApplicationTitle>GlucoMan</ApplicationTitle>
 	  <ApplicationId>it.ingmonti.glucoman</ApplicationId>
 	  <Deterministic>False</Deterministic>
-	  <ApplicationDisplayVersion>0.9.0</ApplicationDisplayVersion>
+	  <ApplicationDisplayVersion>0.9.2</ApplicationDisplayVersion>
 	</PropertyGroup>
 
 	<PropertyGroup>
@@ -187,6 +187,7 @@
 	  <None Remove="Resources\Images\meal.svg" />
 	  <None Remove="Resources\Images\meals.png" />
 	  <None Remove="Resources\Images\meals.svg" />
+	  <None Remove="Resources\Images\meal_20x20.png" />
 	  <None Remove="Resources\Images\minus.png" />
 	  <None Remove="Resources\Images\other.png" />
 	  <None Remove="Resources\Images\other.svg" />
@@ -204,6 +205,7 @@
 	  <None Remove="Resources\Images\sugar.svg" />
 	  <None Remove="Resources\Images\syringe.png" />
 	  <None Remove="Resources\Images\syringe.svg" />
+	  <None Remove="Resources\Images\syringe_20x20.png" />
 	  <None Remove="Resources\Images\total_sugar.png" />
 	</ItemGroup>
 
@@ -246,6 +248,8 @@
 	  <MauiImage Include="Resources\Images\rounding.png" />
 	  <MauiImage Include="Resources\Images\sensor2app.png" />
 	  <MauiImage Include="Resources\Images\statistics.png" />
+	  <EmbeddedResource Include="Resources\Images\meal_20x20.png" />
+	  <EmbeddedResource Include="Resources\Images\syringe_20x20.png" />
 	  <MauiImage Include="Resources\Images\syringe.png" />
 	  <MauiImage Include="Resources\Images\total_sugar.png" />
 	</ItemGroup>
@@ -293,6 +297,9 @@
 	  <MauiXaml Update="CropPhotoPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="FullScreenImagePage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="GraphPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
@@ -302,6 +309,10 @@
 	  <MauiXaml Update="StatisticsPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Platforms\Android\Platforms\Android\" />
 	</ItemGroup>
 
 	<Import Project="..\SharedGlucoMan\SharedGlucoMan.projitems" Label="Shared" />
