Added control theory identification  methods
StatisticsPage: added the launch of Identification1 and Identification2 methods end result visualization
SharedMathematics: added a shared project with two identification of first order systems' methods
Identification1: identifies the parameters of a SISO system in which the unique input is the algebraic sum of the inputs (CHO and insulin)
Identification2: identifies the parameters of two SISO system in which the unique input is the algebraic sum of the inputs (CHO and insulin)

The methods currently don't give any good results

--- a/GlucoMan.Maui/GlucoMan.Maui.csproj
+++ b/GlucoMan.Maui/GlucoMan.Maui.csproj
@@ -270,6 +270,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="CommunityToolkit.Maui" Version="12.2.0" />
+		<PackageReference Include="MathNet.Numerics" Version="5.0.0" />
 		<PackageReference Include="Microsoft.Data.Sqlite.Core" Version="9.0.9" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.9" />
 		<PackageReference Include="Microsoft.Maui.Controls" Version="9.0.110" />
@@ -334,5 +335,9 @@
 	<Import Project="..\SharedGeneral\SharedGeneral.projitems" Label="Shared" />
 
 	<Import Project="..\SharedMaui\SharedMaui.projitems" Label="Shared" />
+
+	<Import Project="..\SharedMathematics\SharedMathematics.projitems" Label="Shared" />
+
+	<Import Project="..\SharedMathematics\SharedMathematics.projitems" Label="Shared" />
 
 </Project>
